--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="about.html">About</a>
         </li>
         <li>
-          <a href="index.html">Contact</a>
+          <a href="contact.html">Contact</a>
         </li>
         <li>
           <a href="index.html" title="Shop Now" class="bag"> <i class="fa fa-shopping-bag" aria-hidden="true"></i> </a>
