--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,9 +24,23 @@
                      background-image: url('images/about/banner.png'); z-index: 999; margin-bottom: 30px; }
         </style>
     
-</head>
 
-<body>   <!-- section header start -->
+  <script>
+   window.onload=function(){
+       // alert('done');
+       document.getElementById('loader').style.display="none";
+       document.getElementById('all').style.display="block";
+   }
+
+</script>
+</head>
+<!-- service_7bkxuoi -->
+<!-- GuwW_d9oK1kDBoGqFfUnj -->
+
+<body>
+  <div id="loader">
+    <img src="images/doto.gif" alt="">
+</div>  <!-- section header start -->
     <section class="header">
       
       <a href="index.html" title="Aqib's Wardrobe">
