--- a/sproduct.html
+++ b/sproduct.html
@@ -19,9 +19,23 @@
           });
       });
   </script>
-</head>
+<script>
+   window.onload=function(){
+       // alert('done');
+       document.getElementById('loader').style.display="none";
+       document.getElementById('all').style.display="block";
+   }
 
-<body> 
+</script>
+</head>
+<!-- service_7bkxuoi -->
+<!-- GuwW_d9oK1kDBoGqFfUnj -->
+
+<body>
+  <div id="loader">
+    <img src="images/doto.gif" alt="">
+</div>
+    
       <!-- section header start -->
   <section class="header">
     
@@ -46,7 +60,7 @@
             <a href="about.html">About</a>
           </li>
           <li>
-            <a href="index.html">Contact</a>
+            <a href="contact.html">Contact</a>
           </li>
           <li>
             <a href="index.html" title="Shop Now" class="bag"> <i class="fa fa-shopping-bag" aria-hidden="true"></i> </a>
