--- a/shop.html
+++ b/shop.html
@@ -27,9 +27,22 @@
   }
         </style>
     
-</head>
+<script>
+   window.onload=function(){
+       // alert('done');
+       document.getElementById('loader').style.display="none";
+       document.getElementById('all').style.display="block";
+   }
 
-<body>   <!-- section header start -->
+</script>
+</head>
+<!-- service_7bkxuoi -->
+<!-- GuwW_d9oK1kDBoGqFfUnj -->
+
+<body>
+  <div id="loader">
+    <img src="images/doto.gif" alt="">
+</div>  <!-- section header start -->
     <section class="header">
       
       <a href="index.html" title="Aqib's Wardrobe">
