--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
           <a href="contact.html">Contact</a>
         </li>
         <li>
-          <a href="index.html" title="Shop Now" class="bag"> <i class="fa fa-shopping-bag" aria-hidden="true"></i> </a>
+          <a href="sproduct.html" title="Shop Now" class="bag"> <i class="fa fa-shopping-bag" aria-hidden="true"></i> </a>
+
         </li>
       </ul>
 
