--- a/about.html
+++ b/about.html
@@ -66,7 +66,8 @@
             <a href="contact.html">Contact</a>
           </li>
           <li>
-            <a href="index.html" title="Shop Now" class="bag"> <i class="fa fa-shopping-bag" aria-hidden="true"></i> </a>
+            <a href="sproduct.html" title="Shop Now" class="bag"> <i class="fa fa-shopping-bag" aria-hidden="true"></i> </a>
+
           </li>
         </ul>
   
