--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
             <a href="index.html">Contact</a>
           </li>
           <li>
-            <a href="index.html" title="Shop Now" class="bag"> <i class="fa fa-shopping-bag" aria-hidden="true"></i> </a>
+            <a href="sproduct.html" title="Shop Now" class="bag"> <i class="fa fa-shopping-bag" aria-hidden="true"></i> </a>
           </li>
         </ul>
   
